--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.1.6",
     "mongoose": "^8.4.3",
     "next": "14.2.4",
     "react": "^18",
