--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mongoose": "^8.4.3",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@types/node": "^20",
